# videos2anki

./: .gitignore  .taurignore  Cargo.toml  Makefile  Trunk.toml  init.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  build-ci.yml  rust-ci.yml
gui/: main.py
rsbridge/: lib.rs
rsbuild/: Cargo.toml  tauri.conf.json
rsbuild/src/: main.rs
rslib/: Cargo.toml  bridge.rs
rslib/bridge/: generate.rs  lib.rs
rslib/ffmpeg/: Cargo.toml
rslib/ffmpeg/src/: cut.rs  install.rs  lib.rs  run.rs
rslib/file/: Cargo.toml
rslib/file/src/: csv.rs  srt.rs
rslib/src/: deck.rs  lib.rs
rslib/src/ffmpeg/: cut.rs  mod.rs
rslib/src/file/: csv.rs
src/: app.rs  bridge.pyd  ffmpeg.rs  file.rs  init.py  lib.rs  main.rs  srt.rs
src/ffmpeg/: cut.rs  mod.rs  run.rs
src/file/: csv.rs  mod.rs  srt.rs
src/gui/: main.py
