[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bridge"
crate-type = ["cdylib"]
path = "./rslib/bridge.rs"

[dependencies]
pyo3 = "0.20.0"
ffmpeg = { path = "./rslib/ffmpeg" }
file = { path = "./rslib/file" }
